@@ -605,18 +605,6 @@ warning.
 
 =item -
 
-B<dh_installdocs> now installs user-supplied documentation
-(e.g. debian/I<package>.docs) into F</usr/share/doc/mainpackage>
-rather than F</usr/share/doc/package> by default as recommended by
-Debian Policy 3.9.7.
-
-If you need the old behaviour, it can be emulated by using the
-B<--mainpackage> option.
-
-Please remember to check/update your doc-base files.
-
-=item -
-
 B<dh_installdirs> no longer creates debian/I<package> directories
 unless explicitly requested (or it has to create a subdirectory in
 it).
