@@ -37,10 +37,6 @@ level).
 
 List documentation files to be installed into I<package>.
 
-In compat 11 (or later), these will be installed into
-F</usr/share/doc/mainpackage>.  Previously it would be
-F</usr/share/doc/package>.
-
 =item F<debian/copyright>
 
 The copyright file is installed into all packages, unless a more
@@ -245,16 +241,10 @@ foreach my $package (getpackages()) {
 	next if $skip_install;
 
 	if (not $nodocs and @docs) {
-		my $target_package = $package;
 		my $exclude = ' -and ! -empty';
 		if ($dh{EXCLUDE_FIND}) {
 			$exclude .= ' -and ! \( '.$dh{EXCLUDE_FIND}.' \)';
 		}
-		if (not compat(10)) {
-			$target_package = $dh{MAINPACKAGE};
-		}
-		my $target_dir = "$tmp/usr/share/doc/$target_package";
-		install_dir($target_dir) unless -l $target_dir;
 		foreach my $doc (@docs) {
 			next if excludefile($doc);
 			next if -f $doc && ! -s _; # ignore empty files
@@ -264,13 +254,14 @@ foreach my $package (getpackages()) {
 				my $dir = ($basename eq '.') ? $doc : "$doc/..";
 				my $pwd=`pwd`;
 				chomp $pwd;
-				my $docdir = "$pwd/$target_dir";
+				my $docdir = "$pwd/$tmp/usr/share/doc/$package";
 				complex_doit("cd '$dir' && " .
 							 "find '$basename' \\( -type f -or -type l \\)$exclude -print0 | LC_ALL=C sort -z | " .
 							 "xargs -0 -I {} cp --reflink=auto --parents -dp {} $docdir");
 			}
 			else {
-				doit("cp", '--reflink=auto', "-a", $doc, $target_dir);
+				doit("cp", '--reflink=auto', "-a", $doc,
+					 "$tmp/usr/share/doc/$package");
 			}
 		}
 		doit("chown","-R","0:0","$tmp/usr/share/doc");
