@@ -32,6 +32,8 @@ debhelper (10.6) UNRELEASED; urgency=medium
   * dh_installman: Ditto.
   * dh_installman: Fix bug in how it handled language auto-detection in
     compat 11.  Previously, it did not work as intended.
+  * dh_installdocs: Revert change in compat 11, where it would install
+    documentation into /usr/share/doc/mainpackage.  (Reopens: #824221)
 
  -- Niels Thykier <niels@thykier.net>  Tue, 27 Jun 2017 17:29:32 +0000
 
